--- a/app/src/main/res/menu/optionmenu.xml
+++ b/app/src/main/res/menu/optionmenu.xml
@@ -2,10 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="reload"
-        android:id="@+id/reload"/>
     <item android:title="About Us"
         android:id="@+id/about"/>
     <item android:id="@+id/exit"
         android:title="exit"/>
+    <item android:id="@+id/reload"
+        android:title="Refresh"
+        android:icon="@drawable/refresh"
+        android:orderInCategory="100"
+        app:showAsAction="always" />
 </menu>
